--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     </body>
         <h1>Etch</h1>
         <p>It's a little Sketch...</p>
+        <div id="buttons">
+            <div class="button" id="reset"><span>Reset</span></div>
+            <div class="button"id="resize"><span>Resize</span></div>
+            <div class="button" id="black"><span>Normal Mode</span></div>
+            <div class="button" id="rainbow"><span>Rainbow Mode</span></div>
+            <div class="button" id="color"><span>Color Mode</span></div>
+            <div class="button" id="shade"><span>Shading Mode</span></div>
+            <div class="button" id="erase"><span>Eraser</span></div>
+        </div>
         <div id="grid-container"></div>
         <script src="script.js"></script>
     </body>
