--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
         <div id="buttons">
             <div class="button" id="reset"><span>Reset</span></div>
             <div class="button"id="resize"><span>Resize</span></div>
-            <div class="button" id="black"><span>Normal Mode</span></div>
+            <div class="button" id="black"><span>Black Mode</span></div>
+            <div class="button" id="random"><span>Random Color Pick</span></div>
             <div class="button" id="rainbow"><span>Rainbow Mode</span></div>
-            <div class="button" id="color"><span>Color Mode</span></div>
+            <div class="button" id="color"><span>Choose a Color</span></div>
             <div class="button" id="shade"><span>Shading Mode</span></div>
             <div class="button" id="erase"><span>Eraser</span></div>
         </div>
