--- a/index.html
+++ b/index.html
@@ -5,19 +5,18 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     </body>
-        <h1>Etch</h1>
-        <p>It's a little Sketch...</p>
+        <h1 onmouseover='itsSketch(this)' onmouseout='itsEtch(this)'>&#8226; &#8226; Etch &#8226; &#8226;</h1>
         <div id="buttons">
             <div class="button" id="reset"><span>Reset</span></div>
             <div class="button"id="resize"><span>Resize</span></div>
-            <div class="button" id="black"><span>Black Mode</span></div>
-            <div class="button" id="random"><span>Random Color Pick</span></div>
-            <div class="button" id="rainbow"><span>Rainbow Mode</span></div>
-            <div class="button" id="color"><span>Choose a Color</span></div>
-            <div class="button" id="shade"><span>Shading Mode</span></div>
+            <div class="button" id="black"><span>Black</span></div>
+            <div class="button" id="random"><span>Random</span></div>
+            <div class="button" id="rainbow"><span>Rainbow</span></div>
+            <div class="button" id="color"><span>Choose</span></div>
             <div class="button" id="erase"><span>Eraser</span></div>
         </div>
         <div id="grid-container"></div>
+        <script src="https://unpkg.com/vanilla-picker@2"></script>
         <script src="script.js"></script>
     </body>
 </html>
